[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
name = "supernova"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
supernova-macros = { path = "crates/supernova-macros" }
supernova-decode = { path = "crates/supernova-decode" }

numpy = "0.25.0"
pyo3 = { version = "0.25.0", features = ["auto-initialize", "extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
